# job_board_api

./: .env  Cargo.toml  gitignore  job_board_db.sql
src/: main.rs
src/handlers/: admin_handler.rs  application_handler.rs  auth_handler.rs  company_handler.rs  job_handler.rs  mod.rs  user_handler.rs
src/middleware/: auth_middleware.rs
src/models/: admin.rs  application.rs  company.rs  job.rs  mod.rs  user.rs
src/routes/: admins.rs  applications.rs  auth.rs  companies.rs  jobs.rs  mod.rs  users.rs
