[package]
name = "job_board_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-native-tls", "macros", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
chrono = { version = "0.4", features = ["serde", "clock"] }
futures-util = "0.3"
serde_json = "1.0"
